# MultipleAPIBasedTracker

./: CMakeLists.txt  qmlmodules  test.qmlproject  test.qmlproject.qtds
MetaShelf/: CMakeLists.txt  Main.qml  main.cpp
MetaShelf/DataClasses/: book.cpp  book.h  bookmodel.cpp  bookmodel.h  media.cpp  media.h
MetaShelf/HelperClasses/: apimanager.cpp  apimanager.h  databasemanager.cpp  databasemanager.h  envmanager.cpp  envmanager.h  googlebooksapimanager.cpp  googlebooksapimanager.h
MetaShelf/assets/: resources.qrc
MetaShelf/pages/: Base.ui.qml  BooksDelegate.qml  BooksModel.qml  BooksPageForm.ui.qml  ConnectionsDelegate.qml  ConnectionsModel.qml  LoginPage.ui.qml
build-content-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: CMakeCache.txt  qtcsettings.cmake
content/: AccountPage.qml  App.qml  BooksModel.qml  BooksPageForm.ui.qml  CMakeLists.txt  ConnectionsDelegate.qml  ConnectionsModel.qml  LoginDialog.ui.qml  LoginPage.ui.qml  Screen01.ui.qml
imports/: CMakeLists.txt
imports/test/: CMakeLists.txt  qmldir
imports/test/designer/: plugin.metainfo
src/: import_qml_plugins.h  main.cpp
